--- a/boniu_guanggao/app/src/main/res/layout/activity_main.xml
+++ b/boniu_guanggao/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,15 @@
     <TextView
         android:id="@+id/tv_1"
         android:text="激励视频"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="50dp"/>
 
+
+    <TextView
+        android:id="@+id/tv_2"
+        android:text="下载apk"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"/>
 </LinearLayout>
