--- a/boniu_guanggao/app/src/main/res/xml/file_paths.xml
+++ b/boniu_guanggao/app/src/main/res/xml/file_paths.xml
@@ -10,7 +10,7 @@
 
     <external-path
         name="root_path"
-        path="Android/data/com.treefinance.gongfudai" />
+        path="Android/data/com.joe.holi" />
 
     <external-files-path
         name="external_file_path"
